# src/FeaturesEnabled.ClaimBased.AutoSwagger.Api.json
@@ -7,7 +7,52 @@
     "version": "v1"
   },
   "paths": {
-    "/api/v{version}/Authorize": {
+    "/api/v{version}/authorize/verify": {
+      "post": {
+        "tags": [
+          "Authorize"
+        ],
+        "operationId": "Authorize_Verify",
+        "parameters": [
+          {
+            "name": "version",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "x-position": 2
+          }
+        ],
+        "requestBody": {
+          "x-name": "model",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LoginRequest"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          },
+          "400": {
+            "description": ""
+          },
+          "404": {
+            "description": ""
+          },
+          "500": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/v{version}/authorize": {
       "post": {
         "tags": [
           "Authorize"
